--- a/api/api_deply.yml
+++ b/api/api_deply.yml
@@ -4,7 +4,7 @@ metadata:
   name: bot-deployment
   labels:
     monitoring: prometheus
-
+  namespace: kube-ops
 spec:
   replicas: 1
   selector:
@@ -18,6 +18,6 @@ spec:
     spec:
       containers:
         - name: bot-service
-          image: louis70109/chatops:v9
+          image: louis70109/chatops:v15
           ports:
             - containerPort: 31110
