--- a/api/api_forward.yml
+++ b/api/api_forward.yml
@@ -2,17 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: bot-service
-  name: bot-service
+    app: api-service
+  name: api-service
   namespace: kube-ops
 
 spec:
   ports:
-    - name: 'bot-svc'
+    - name: 'api-svc'
       nodePort: 31110
       port: 31110
       protocol: TCP
       targetPort: 31110
   selector:
-    app: bot-service
+    app: api-service
   type: NodePort
